Fix for DOCS-110: Verbatim text renders too large in Opera
Tested with forgerock-doc-maven-plugin-test

--- a/forgerock-doc-maven-plugin/trunk/src/main/resources/coredoc.css
+++ b/forgerock-doc-maven-plugin/trunk/src/main/resources/coredoc.css
@@ -67,8 +67,8 @@ code,
 .command>strong,
 div.literallayout,
 .filename {
-    font-family: monospace;
-    font-size: 1.1em;
+    font-family: "Courier New", monospace, serif;
+    font-size: 1em;
     font-weight: normal;
 }
 
@@ -221,8 +221,8 @@ div.variablelist-title {
 div.synopsis {
     background-color: #fafafa;
     border: thin dashed #ccc;
-    font-family: monospace;
-    font-size: 1.1em;
+    font-family: "Courier New", monospace, serif;
+    font-size: 1em;
     margin-bottom: 1em;
     padding: 0.5em;
     white-space: pre;
